@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.uModCarol2" version="4.2.1" name="Estuary uMod Carol2" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.uModCarol2" version="4.2.2" name="Estuary uMod Carol2" provider-name="darkozma, devalls, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.14.0"/>
 		<import addon="resource.images.skinbackgrounds.clearMod" version="1.1.5"/>    
@@ -45,7 +45,8 @@
 			<screenshot>resources/screenshot-09.png</screenshot>
 		</assets>
 		<news>[COLOR blue][B]Skin Estuary uMod Carol2[/B][/COLOR]
-[COLOR green][B]•4.2.1[/B] New system.[/COLOR]
+[COLOR green][B]•4.2.2[/B] Update menu.[/COLOR]
+[COLOR yellow][B]•4.2.1[/B] New system.[/COLOR]
 [COLOR yellow][B]•3.1.7[/B] Old system.[/COLOR]
 		</news>
 	</extension>
